; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium.c_finish_dma_single.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium.c_finish_dma_single.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cvm_mmc_host = type { i32 }
%struct.mmc_data = type { i32, i32, i32, i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cvm_mmc_host*, %struct.mmc_data*)* @finish_dma_single to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @finish_dma_single(%struct.cvm_mmc_host* %0, %struct.mmc_data* %1) #0 {
  %3 = alloca %struct.cvm_mmc_host*, align 8
  %4 = alloca %struct.mmc_data*, align 8
  store %struct.cvm_mmc_host* %0, %struct.cvm_mmc_host** %3, align 8
  store %struct.mmc_data* %1, %struct.mmc_data** %4, align 8
  %5 = load %struct.mmc_data*, %struct.mmc_data** %4, align 8
  %6 = getelementptr inbounds %struct.mmc_data, %struct.mmc_data* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.mmc_data*, %struct.mmc_data** %4, align 8
  %9 = getelementptr inbounds %struct.mmc_data, %struct.mmc_data* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = mul nsw i32 %7, %10
  %12 = load %struct.mmc_data*, %struct.mmc_data** %4, align 8
  %13 = getelementptr inbounds %struct.mmc_data, %struct.mmc_data* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 8
  %14 = load %struct.mmc_data*, %struct.mmc_data** %4, align 8
  %15 = getelementptr inbounds %struct.mmc_data, %struct.mmc_data* %14, i32 0, i32 5
  store i64 0, i64* %15, align 8
  %16 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %3, align 8
  %17 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.mmc_data*, %struct.mmc_data** %4, align 8
  %20 = getelementptr inbounds %struct.mmc_data, %struct.mmc_data* %19, i32 0, i32 4
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.mmc_data*, %struct.mmc_data** %4, align 8
  %23 = getelementptr inbounds %struct.mmc_data, %struct.mmc_data* %22, i32 0, i32 3
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.mmc_data*, %struct.mmc_data** %4, align 8
  %26 = call i32 @get_dma_dir(%struct.mmc_data* %25)
  %27 = call i32 @dma_unmap_sg(i32 %18, i32 %21, i32 %24, i32 %26)
  ret i32 1
}

declare dso_local i32 @dma_unmap_sg(i32, i32, i32, i32) #1

declare dso_local i32 @get_dma_dir(%struct.mmc_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
